# webarx

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  WebArxConfig.cmake  main.cpp  tags
cmake/: BoostUnitTest.cmake  FindBoostPO.cmake  GetCpr.cmake  GetFTXUI.cmake  GetTinyXML2.cmake  Install.cmake  NoInSourceBuild.cmake
src/: CMakeLists.txt  main.cpp
src/cliparser/: CMakeLists.txt  cliparser.cpp  cliparser.hpp
src/cliparser/include/: cliparser.hpp
src/papers/: CMakeLists.txt  papers.cpp  papers.hpp
src/papers/include/: papers.hpp
src/parse/: parsing.cpp  parsing.hpp
src/query/: CMakeLists.txt  cli.cpp  cli.hpp  field.cpp  field.hpp  query.cpp  query.hpp  response.hpp
src/query/include/: field.hpp  query.hpp
src/tui/: CMakeLists.txt  tui.cpp  tui.hpp
test/: CMakeLists.txt
test/cliparse/: CMakeLists.txt  cliparser_test.cpp
test/cliparser/: CMakeLists.txt  cliparser_test.cpp
test/papers/: CMakeLists.txt  papers_test.cpp
test/query/: CMakeLists.txt  field_test.cpp  query_test.cpp
